更换base64编码种类